# codex-stop-notify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
hooks/: codex-config.toml.example
hooks/codex-stop-notif/: codex-stop-notif.env.example
src/: config.rs  dedup.rs  email.rs  event.rs  html.rs  lib.rs  main.rs  redact.rs  transcript.rs
tests/: generate_test_html.rs  test_integration.rs  test_real_email.rs  test_real_transcript_replay.rs
